# spot_ros

./: README.md
spot_description/meshes/arm/: finger.stl
spot_description/urdf/: accessories.urdf.xacro  spot_arm.xacro
spot_driver/: CMakeLists.txt  package.xml
spot_driver/config/: teleop.yaml
spot_driver/launch/: accessories.launch  control.launch  driver.launch  sensors.launch
spot_driver/scripts/: spot_controller
spot_driver/src/spot_driver/: pointcloud_fusion.cpp  spot_controller.py  spot_ros.py  spot_wrapper.py  velodyne_point_filter.cpp
